# optimization_engine

./: .gitignore  PIPELINE.md  PIPELINE_BROCHURE_STANDALONE.html  PIPELINE_WHITEPAPER.html  README.md  analyze_cm_nq.py  analyze_v8.py  artifact_writer.py  auto_fixer.py  catfish.py  config.py  failure_analyst.py  filter_compiler.py  indicator_lib.py  infographic_base64.txt  ir_builder.py  lane_manager.py  llm_utils.py  main.py  market_context.py  optimization_engine.py  parity_checker.py  pine_critic.py  pine_parser.py  pine_transpiler.py  pyproject.toml  quant_developer.py  quant_engine.py  quant_operator.py  rag.py  regime_tagger.py  strategist.py  strategy_profile.py  validation_ingestor.py  vram_manager.py
tests/: test_math.py
