[project]
name = "chronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lmstudio>=1.5.0",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "optuna>=4.8.0",
    "pandas<3.0.0",
    "python-dotenv>=1.2.2",
    "tradingview-screener>=3.1.0",
    "yfinance>=1.3.0",
    "tqdm>=4.66.0",
]
